# fal-image-studio

./: .gitignore  G9vib1XbUAAirbc.jfif  README.md  ai-chain-studio-v2.jsx  memo.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: generate.yml
src/fal_studio/: __init__.py  cli.py  client.py  models.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: build-manifest.js
web/src/: App.jsx  fal.js  models.js  theme.js
